# nlp

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/data/: train_data.txt
cpp/include/: appcontroller.h  traindataparser.h  utf8file.h  wordnet.h  wordnode.h
cpp/prototypes/jlemma/src/WordNormalizer/: LemmatizerModel.java
cpp/prototypes/pylemma/: lemmas-rus-training.txt  pylemma.py  wordnet.py
cpp/src/: appcontroller.cpp  main.cpp  traindataparser.cpp  utf8file.cpp  wordnet.cpp  wordnode.cpp
java/jlemma/src/: Main.java
java/jlemma/src/WordNormalizer/: LemmatizerModel.java  RussianPorterStemmer.java  TrainDataParser.java
python/pylema/: pylemma.py  wordnet.py
python/unsupevised_learning/: main.py
python/unsupevised_learning/original/unsupervised/: microblog.txt  microsky.txt  profiled_output.txt  profiled_output_comments.txt  skyfall.txt  stdtest.py  tools.py  unsupervisedClassifier.py
python/unsupevised_learning/original/unsupervised/skyfall/: 107-cover_adele_skyfall.out.txt  107-tengok_nak_skyfall.out.txt  110-lagu_adele_skyfall.out.txt  117-terkadang_terbaik_lama.out.txt  123-record_sets_bond.out.txt  130-de_en_la.out.txt  1431-james_skyfall_bond.out.txt  206-w_httpsq_skyfall.out.txt  207-craig_daniel_skyfall.out.txt  210-craig_daniel_bond.out.txt  235-aston_martin_skyfall.out.txt  32-ntn_yg_skyfall.out.txt  32-secrets_shocking_mtv.out.txt  33-fan_artsy_bond.out.txt  330-biggest_opening_bond.out.txt  34-de_para_bond.out.txt  34-quiero_ver_skyfall.out.txt  34-record_de_le.out.txt  35-hotel_transilvania_skyfall.out.txt  35-talks_harris_naomie.out.txt  (+31 more)
